force-app/main/default/objects/Case_Detail__c/fields/BV_Case__c.field-meta.xml
<CustomField>
    <fullName>BV_Case__c</fullName>
    <label>BV Case</label>
    <referenceTo>BV_Case__c</referenceTo>
    <relationshipLabel>Case Details</relationshipLabel>
    <relationshipName>Case_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>