force-app/main/default/objects/Case_Detail__c/fields/Case_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Officer_Name__c</fullName>
    <label>Case Officer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>