force-app/main/default/objects/Case_Detail__c/fields/Complete_Wills_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Complete_Wills_Checklist__c</fullName>
    <label>Complete Wills Checklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>