force-app/main/default/objects/Case_Detail__c/fields/Cost_3__c.field-meta.xml
<CustomField>
    <fullName>Cost_3__c</fullName>
    <label>Cost 3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>