force-app/main/default/objects/Case_Detail__c/fields/Date_5__c.field-meta.xml
<CustomField>
    <fullName>Date_5__c</fullName>
    <label>Date 5</label>
    <type>Date</type>
</CustomField>