force-app/main/default/objects/Case_Detail__c/fields/Date_Will_Found__c.field-meta.xml
<CustomField>
    <fullName>Date_Will_Found__c</fullName>
    <label>Date Will Found</label>
    <type>Date</type>
</CustomField>