force-app/main/default/objects/Case_Detail__c/fields/Draft_sent_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>Draft_sent_to_Manager__c</fullName>
    <label>Draft sent to Manager</label>
    <type>Date</type>
</CustomField>