force-app/main/default/objects/Case_Detail__c/fields/Line_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Name__c</fullName>
    <label>Line Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>