force-app/main/default/objects/Case_Detail__c/fields/MP__c.field-meta.xml
<CustomField>
    <fullName>MP__c</fullName>
    <label>MP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>