force-app/main/default/objects/Case_Detail__c/fields/Paper_2__c.field-meta.xml
<CustomField>
    <fullName>Paper_2__c</fullName>
    <label>Paper 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>