force-app/main/default/objects/Case_Detail__c/fields/Paper_3__c.field-meta.xml
<CustomField>
    <fullName>Paper_3__c</fullName>
    <label>Paper 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>