force-app/main/default/objects/Case_Detail__c/fields/Planning__c.field-meta.xml
<CustomField>
    <fullName>Planning__c</fullName>
    <label>Planning?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>