force-app/main/default/objects/Case_Detail__c/fields/Specimen_Signature_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Specimen_Signature_Obtained__c</fullName>
    <label>Specimen Signature Obtained?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>