force-app/main/default/objects/Case_Detail__c/fields/Stockbroker__c.field-meta.xml
<CustomField>
    <fullName>Stockbroker__c</fullName>
    <label>Stockbroker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>