force-app/main/default/objects/Case_Detail__c/fields/Stockbroker_Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>Stockbroker_Address_Line_4__c</fullName>
    <label>Stockbroker Address Line 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>