force-app/main/default/objects/Case_Detail__c/fields/Stockbroker_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Stockbroker_Postcode__c</fullName>
    <label>Stockbroker Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>