force-app/main/default/objects/Case_Detail__c/fields/Stockbroker_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Stockbroker_Telephone__c</fullName>
    <label>Stockbroker Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>