force-app/main/default/objects/Case_Detail__c/fields/Type_of_Review__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Review__c</fullName>
    <label>Type of Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>