force-app/main/default/objects/Case_Detail__c/fields/Will_Date__c.field-meta.xml
<CustomField>
    <fullName>Will_Date__c</fullName>
    <label>Will Date</label>
    <type>Date</type>
</CustomField>