force-app/main/default/objects/Case_Detail__c/recordTypes/Reviews.recordType-meta.xml
<RecordType>
    <fullName>Reviews</fullName>
    <active>true</active>
    <label>Reviews</label>
</RecordType>