force-app/main/default/objects/Case_Detail__c/recordTypes/Wills.recordType-meta.xml
<RecordType>
    <fullName>Wills</fullName>
    <active>true</active>
    <label>Wills</label>
</RecordType>